style.css
@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Wittgenstein:wght@400..900&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Wittgenstein', serif;
    scroll-behavior: smooth;
}

html {
    color-scheme: light;
}

body {
    background-color: rgb(236, 200, 172);
}

.header {
    position: absolute;
    width: 100%;
    z-index: 1;
}

.navitems li {
    list-style: none;
}

.navlink {
    text-decoration: none;
    color: #72342e;
    transition: all 0.2s;
    text-transform: uppercase;
}

.navlink:visited {
    color: #72342e;
}

.navlink:hover {
    color: #db6f63;
}

.menubar {
    position: fixed;
    padding: 20px 40px;
    border-bottom: 1px solid #72342e;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    background-color: rgba(236, 200, 172, 0.8);
    width: 100%;
    height: 100px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 1rem;
    font-weight: 500;
    letter-spacing: 3px;
}

.menubar .logo {
    width: 60px;
    height: 60px;
    background-image: url(./assets/Icon-inactive.png);
    background-size: contain;
    background-position: center;
    transition: all 0.2s;
}

.menubar .logo:hover {
    background-image: url(./assets/icon-active.png);
}

.menubar .navitems {
    display: flex;
    gap: 2rem;
}

.togglebutton {
    display: none;
}

.togglebutton span {
    color: #72342e;
    transition: all 0.2s;
    cursor: pointer;
}

.togglebutton span:hover{
    color: #db6f63;
}

.dropdown {
    position: absolute;
    overflow: hidden;
    right: 5rem;
    top: 38px;
    width: 0px;
    height: 0px;
    padding: 0;
    background-color: rgba(255, 241, 230, 0.9);
    backdrop-filter: blur(10px);
    border-radius: 120px 0px 120px 60px;
    list-style: none;
    text-decoration: none;
    color: #72342e;
    transition: all 0.2s;
    text-transform: uppercase;
    text-align: center;
    font-size: 1rem;
    font-weight: 500;
    letter-spacing: 3px;
    line-height: 60px;
}

.bodysection {
    height: 100vh;
    background-color: rgb(236, 200, 172);
}

.langgrid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 30px;
    width: 70vw;
    margin-left: 15vw;
    margin-top: 30px;
}

.langbutton {
    background-color: #72342e;
    height: 100px;
    border-radius: 100px;
    transition: all 0.2s;
}

.langbutton:hover {
    background-color: #db6f63;
}

.langbutton a {
    color: rgb(236, 200, 172);
    text-decoration: none;
    text-transform: uppercase;
    font-size: 2em;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.langbutton a:visited {
    color: rgb(236, 200, 172);
}

.welcometext, .welcomescroll, .bodytext, .welcometitle, .bodytitle {
    color: #72342e;
}

.welcometext, .welcomescroll, .welcometitle {
    text-align: center;
}

.bodytext {
    text-align: center;
    margin: 20px 300px;
    font-size: 1.5em;
}

.bodytextcenter {
    text-align: center;
    color: #72342e;
    margin-top: 20px;
    font-size: 1.5em;
}

.bodylink {
    color: #db6f63;
    transition: all 0.2s;
}

.bodylink:hover {
    color: #2d1412 !important;
}

.bodylink:visited {
    color: #db6f63;
}

.welcometext {
    font-size: 2rem;
    font-weight: 500;
    padding-top: 40vh;
}

.welcometitle {
    font-size: 6rem;
    font-weight: 900;
    text-transform: uppercase;
}

.welcomescroll {
    font-size: 1.25rem;
    font-weight: 300;
    text-transform: uppercase;
    padding-top: 25vh;
}

.bodytitle {
    margin-top: 30px;
    text-align: center;
    font-size: 4rem;
}

.accordion {
    display: flex;
    flex-direction: column;
    gap: 1em;
    width: 800px;
    margin-left: calc((100vw - 800px)/2);
}

.accordionpanel {
    position: relative;
    isolation: isolate;
    flex-basis: 4.5em;
    overflow: hidden;
    padding: 0.75em;
    padding-right: 3em;
    border-radius: 2.25em;
    transition: all 0.5s;
}

.accordionpanel:has([aria-expanded = 'true']) {
    flex-basis: 15em;
}

.accordioncontent .accordiontext {
    transform: translateY(2rem);
    opacity: 0;
    color: rgb(212, 174, 146);
    transition: all 0.5s;
    transition-delay: 0.5s ;
    margin-left: 3.6em;
    pointer-events: none;
    font-size: 1.1em;
}

.accordiontext .accordionlink {
    color: #db6f63;
    transition: all 0.2s;
}

.accordiontext .accordionlink:visited {
    color: #db6f63;
}

.accordiontext .accordionlink:hover {
    color: #fec4be;
}

.accordionpanel:has([aria-expanded = 'true']) .accordioncontent .accordiontext {
    transform: translateY(0);
    opacity: 100%;
    pointer-events: all;
}

.accordionimage {
    max-width: 100%;
    min-width: 100%;
    display: block;
    position: absolute;
    inset: 0;
    object-fit: cover;
    width: 100%;
    height: 100%;
    z-index: -1;
    transition: all 0.5s;
}

.accordionpanel:has([aria-expanded = 'true']) .accordionimage {
    filter: brightness(0.5) blur(1px);
}

.accordiontrigger {
    background: transparent;
    border: 0;
    padding: 0;
    display: flex;
    align-items: center;
    gap: 1rem;
    flex-direction: row-reverse;
}

.accordionicon {
    background-color: #72342e;
    color: rgb(212, 174, 146);
    height: 2em;
    padding: 0.5em;
    border-radius: 500px;
}

.paneltitle {
    color: rgb(212, 174, 146);
    font-size: 1.5em;
    font-weight: 700;
}

.resumelink a:visited {
    color: #72342e;
}

.resumecontainer {
    margin-top: 50px;
    width: 800px;
    display: grid;
    gap: 1.5em;
    grid-template-columns: 1fr 1fr 1fr;
    margin-left: calc((100vw - 800px)/2);
}

.resumebox {
    background-color: #72342e;
    border-radius: 40px;
    padding: 30px;
}

.two-wide {
    grid-column: span 2;
}

.rboxtitle, .rboxmaininfo, .rboxsecondinfo {
    color: rgb(236, 200, 172);
}

.rboxtitle {
    font-size: 1rem;
    text-transform: uppercase;
    letter-spacing: 3px;
}
/* ... */

